switch flyway base container and update target modes

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,28 +1,6 @@
 pipeline:
-  build:
-    image: quay.io/ukhomeofficedigital/drone-docker
-    commands:
-      - docker build -t refdata:$${DRONE_COMMIT_SHA} .
-    when:
-      event: push
-
-  image_to_quay:
-    image: quay.io/ukhomeofficedigital/drone-docker
-    secrets:
-      - DOCKER_USERNAME
-      - DOCKER_PASSWORD
-    registry: quay.io
-    repo: quay.io/ukhomeofficedigital/refdata
-    tags:
-      - ${DRONE_BUILD_NUMBER}
-      - ${DRONE_COMMIT_SHA}
-      - latest
-    when:
-      branch: master
-      event: push
-
   # test:
-  #   image: quay.io/ukhomeofficedigital/refdata:latest
+  #   image: quay.io/ukhomeofficedigital/docker-flyway:0c81630decc5d7f6c6ec9070d7475b3f3f084153
   #   commands:
   #     - |
   #       until PGPASSWORD=secret psql -U postgres -d postgres -h database \
@@ -61,7 +39,7 @@ pipeline:
   #     event: push
 
   deploy_to_dev:
-    image: quay.io/ukhomeofficedigital/refdata:latest
+    image: quay.io/ukhomeofficedigital/docker-flyway:0c81630decc5d7f6c6ec9070d7475b3f3f084153
     secrets:
       - DEV_POSTGRES_DB
       - DEV_POSTGRES_SERVER
@@ -117,7 +95,7 @@ pipeline:
       environment: dev
 
   deploy_to_staging:
-    image: quay.io/ukhomeofficedigital/refdata:latest
+    image: quay.io/ukhomeofficedigital/docker-flyway:0c81630decc5d7f6c6ec9070d7475b3f3f084153
     secrets:
       - STAGING_POSTGRES_DB
       - STAGING_POSTGRES_SERVER
@@ -173,7 +151,7 @@ pipeline:
       environment: staging
 
   deploy_to_prod:
-    image: quay.io/ukhomeofficedigital/refdata:latest
+    image: quay.io/ukhomeofficedigital/docker-flyway:0c81630decc5d7f6c6ec9070d7475b3f3f084153
     secrets:
       - PROD_POSTGRES_DB
       - PROD_POSTGRES_SERVER
