--- a/.drone.yml
+++ b/.drone.yml
@@ -1,3 +1,7 @@
+workspace:
+  base: /mnt
+  path: /
+
 pipeline:
   # test:
   #   image: quay.io/ukhomeofficedigital/docker-flyway:0c81630decc5d7f6c6ec9070d7475b3f3f084153
@@ -29,9 +33,9 @@ pipeline:
   #     - export FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER="govserviceuser"
   #     - export FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER="govreadonlyuser"
   #     - git checkout -f master
-  #     - /docker/run.sh
+  #     - /mnt/docker/run.sh
   #     - git reset --hard $DRONE_COMMIT
-  #     - /docker/run.sh
+  #     - /mnt/docker/run.sh
   #   when:
   #     branch:
   #       exclude:
@@ -88,7 +92,7 @@ pipeline:
       - export FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER=$${DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER}
       - export FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER=$${DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER}
       - export FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER=$${DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER}
-      - /docker/run.sh
+      - /mnt/docker/run.sh
     when:
       branch: master
       event: deployment
@@ -144,7 +148,7 @@ pipeline:
       - export FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER=$${STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER}
       - export FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER=$${STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER}
       - export FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER=$${STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER}
-      - /docker/run.sh
+      - /mnt/docker/run.sh
     when:
       branch: master
       event: deployment
@@ -200,7 +204,7 @@ pipeline:
       - export FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER=$${PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER}
       - export FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER=$${PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER}
       - export FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER=$${PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER}
-      - /docker/run.sh
+      - /mnt/docker/run.sh
     when:
       branch: master
       event: deployment
