--- a/.drone.yml
+++ b/.drone.yml
@@ -99,7 +99,7 @@ pipeline:
       - export PRIVATE_GIT_URL="ssh://git@$${PRIVATE_GIT_SERVER}:$${PRIVATE_GIT_PORT}/$${PRIVATE_GIT_REPO}.git private-refdata"
       - /usr/bin/create_ssh_key.sh
       - /usr/bin/ssh-keyscan -T 10 -p $${PRIVATE_GIT_PORT} $${PRIVATE_GIT_SERVER}  >> ~/.ssh/known_hosts
-      - git clone ${PRIVATE_GIT_URL}
+      - git clone $${PRIVATE_GIT_URL}
       - /mnt/docker/reset.sh
       - /mnt/docker/run.sh
       - /mnt/private-refdata/docker/run.sh
