export the var stupid

--- a/.drone.yml
+++ b/.drone.yml
@@ -71,6 +71,7 @@ pipeline:
       - PRIVATE_GIT_KEY
       - PRIVATE_GIT_PORT
       - PRIVATE_GIT_SERVER
+      - PRIVATE_GIT_REPO
     commands:
       - export POSTGRES_DB=$${DEV_POSTGRES_DB}
       - export POSTGRES_SERVER=$${DEV_POSTGRES_SERVER}
@@ -99,7 +100,6 @@ pipeline:
       - export PRIVATE_GIT_URL="ssh://git@$${PRIVATE_GIT_SERVER}:$${PRIVATE_GIT_PORT}/$${PRIVATE_GIT_REPO}.git private-refdata"
       - /usr/bin/create_ssh_key.sh
       - /usr/bin/ssh-keyscan -T 10 -p $${PRIVATE_GIT_PORT} $${PRIVATE_GIT_SERVER}  >> ~/.ssh/known_hosts
-      - echo $${PRIVATE_GIT_URL}
       - git clone $${PRIVATE_GIT_URL}
       - /mnt/docker/reset.sh
       - /mnt/docker/run.sh
