we do need to switch dir to get the correct base path

--- a/.drone.yml
+++ b/.drone.yml
@@ -103,6 +103,7 @@ pipeline:
       - git clone $${PRIVATE_GIT_URL}
       - /mnt/docker/reset.sh
       - /mnt/docker/run.sh
+      - cd /mnt/private-refdata
       - /mnt/private-refdata/docker/run.sh
     when:
       branch: master
