--- a/.drone.yml
+++ b/.drone.yml
@@ -136,6 +136,10 @@ pipeline:
       - STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER
       - STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER
       - STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER
+      - PRIVATE_GIT_KEY
+      - PRIVATE_GIT_PORT
+      - PRIVATE_GIT_SERVER
+      - PRIVATE_GIT_REPO
     commands:
       - export POSTGRES_DB=$${STAGING_POSTGRES_DB}
       - export POSTGRES_SERVER=$${STAGING_POSTGRES_SERVER}
@@ -160,7 +164,15 @@ pipeline:
       - export FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER=$${STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER}
       - export FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER=$${STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER}
       - export FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER=$${STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER}
+      - export PRIVATE_KEY=$${PRIVATE_GIT_KEY}
+      - export PRIVATE_GIT_URL="ssh://git@$${PRIVATE_GIT_SERVER}:$${PRIVATE_GIT_PORT}/$${PRIVATE_GIT_REPO}.git private-refdata"
+      - /usr/bin/create_ssh_key.sh
+      - /usr/bin/ssh-keyscan -T 10 -p $${PRIVATE_GIT_PORT} $${PRIVATE_GIT_SERVER}  >> ~/.ssh/known_hosts
+      - git clone $${PRIVATE_GIT_URL}
+      - /mnt/docker/reset.sh
       - /mnt/docker/run.sh
+      - cd /mnt/private-refdata
+      - /mnt/private-refdata/docker/run.sh
     when:
       branch: master
       event: deployment
@@ -192,6 +204,10 @@ pipeline:
       - PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER
       - PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER
       - PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER
+      - PRIVATE_GIT_KEY
+      - PRIVATE_GIT_PORT
+      - PRIVATE_GIT_SERVER
+      - PRIVATE_GIT_REPO
     commands:
       - export POSTGRES_DB=$${PROD_POSTGRES_DB}
       - export POSTGRES_SERVER=$${PROD_POSTGRES_SERVER}
@@ -216,7 +232,15 @@ pipeline:
       - export FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER=$${PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER}
       - export FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER=$${PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER}
       - export FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER=$${PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER}
+      - export PRIVATE_KEY=$${PRIVATE_GIT_KEY}
+      - export PRIVATE_GIT_URL="ssh://git@$${PRIVATE_GIT_SERVER}:$${PRIVATE_GIT_PORT}/$${PRIVATE_GIT_REPO}.git private-refdata"
+      - /usr/bin/create_ssh_key.sh
+      - /usr/bin/ssh-keyscan -T 10 -p $${PRIVATE_GIT_PORT} $${PRIVATE_GIT_SERVER}  >> ~/.ssh/known_hosts
+      - git clone $${PRIVATE_GIT_URL}
+      - /mnt/docker/reset.sh
       - /mnt/docker/run.sh
+      - cd /mnt/private-refdata
+      - /mnt/private-refdata/docker/run.sh
     when:
       branch: master
       event: deployment
