add items and units

--- a/schemas/reference/bulkload/var.yaml
+++ b/schemas/reference/bulkload/var.yaml
@@ -34,3 +34,4 @@ technicalprojectstatus: "technicalprojectstatus.csv"
 unlocode: "unlocode.csv"
 workarea: "workarea.csv"
 clearancetype: "clearancetype.csv"
+unit: "unit.csv"
