--- a/schemas/reference/bulkload/var.yaml
+++ b/schemas/reference/bulkload/var.yaml
@@ -35,3 +35,8 @@ unlocode: "unlocode.csv"
 workarea: "workarea.csv"
 clearancetype: "clearancetype.csv"
 unit: "unit.csv"
+ferries: "ferries.csv"
+ferryroutes: "ferryroutes.csv"
+trailertypes: "trailertypes.csv"
+paymenttypes: "paymenttypes.csv"
+typesofillegals: "typesofillegals.csv"
