new referenece lists to help with use of force

--- a/schemas/reference/bulkload/var.yaml
+++ b/schemas/reference/bulkload/var.yaml
@@ -40,3 +40,4 @@ ferryroutes: "ferryroutes.csv"
 trailertypes: "trailertypes.csv"
 paymenttypes: "paymenttypes.csv"
 typesofillegals: "typesofillegals.csv"
+medicalassistance: "medicalassistance.csv"
