--- a/.drone.yml
+++ b/.drone.yml
@@ -109,7 +109,7 @@ pipeline:
       branch: master
       event: deployment
       environment: dev
-  
+
   deploy_to_staging:
     image: quay.io/ukhomeofficedigital/docker-flyway:9b4c62ed90c599a9bc3282ef06b58818b24762f9
     secrets:
@@ -245,6 +245,24 @@ pipeline:
       branch: master
       event: deployment
       environment: production
+
+  notify:
+    image: plugins/slack
+    secrets: [ SLACK_WEBHOOK ]
+    channel: cop-deployments
+    username: Drone Build Watcher
+    template: >
+        {{#success build.status}}
+          *{{repo.name}} - Build {{build.number}} succeeded*
+          {{build.link}}
+        {{else}}
+          *{{repo.name}} - Build {{build.number}} failed*
+          {{build.link}}
+        {{/success}}
+    when:
+      branch: master
+      event: [ push, deployment ]
+      status: [ success, failure ]
 
 # services:
 #   database:
