add env defaults

--- a/env.yaml
+++ b/env.yaml
@@ -1,34 +1,35 @@
 ---
-git:
-  repo_private_giturl
-  repo_private_port
-  repo_private_url
-db:
- ref:
-    protocol
-    port
-    hostname
-    options
-    jdbc_options
-    default_username
-    default_password
-    default_dbname
-    reference_dbname
-    reference_schema
-    reference_owner_username
-    reference_owner_password
-    reference_authenticator_username
-    reference_authenticator_password
-    reference_anon_username
-    reference_service_username
-    reference_readonly_username
-    governance_schema
-    governance_owner_username
-    governance_owner_password
-    governance_authenticator_username
-    governance_authenticator_password
-    governance_anon_username
-    governance_service_username
-    governance_readonly_username
-    private_gitrepo
-    private_gitkey
+keys:
+  - git:
+      repo_private_giturl
+      repo_private_port
+      repo_private_url
+  - db:
+      ref:
+        protocol
+        port
+        hostname
+        options
+        jdbc_options
+        default_username
+        default_password
+        default_dbname
+        reference_dbname
+        reference_schema
+        reference_owner_username
+        reference_owner_password
+        reference_authenticator_username
+        reference_authenticator_password
+        reference_anon_username
+        reference_service_username
+        reference_readonly_username
+        governance_schema
+        governance_owner_username
+        governance_owner_password
+        governance_authenticator_username
+        governance_authenticator_password
+        governance_anon_username
+        governance_service_username
+        governance_readonly_username
+        private_gitrepo
+        private_gitkey
