Adds the target environment to the notification message

--- a/.drone.yml
+++ b/.drone.yml
@@ -252,13 +252,13 @@ pipeline:
     channel: cop-deployments
     username: Drone Build Watcher
     template: >
-        {{#success build.status}}
-          *{{repo.name}} - Build {{build.number}} succeeded*
-          {{build.link}}
-        {{else}}
-          *{{repo.name}} - Build {{build.number}} failed*
-          {{build.link}}
-        {{/success}}
+      {{#build.deployTo}}
+        *{{repo.name}} - Build {{build.number}} - {{uppercasefirst build.deployTo}} - {{uppercase build.status}}*
+        {{build.link}}
+      {{else}}
+        *{{repo.name}} - Build {{build.number}} - Development - {{uppercase build.status}}*
+        {{build.link}}
+      {{/build.deployTo}}
     when:
       branch: master
       event: [ push, deployment ]
