container size schema creation.

--- a/schemas/reference/bulkload/var.yaml
+++ b/schemas/reference/bulkload/var.yaml
@@ -41,3 +41,4 @@ trailertypes: "trailertypes.csv"
 paymenttypes: "paymenttypes.csv"
 typesofillegals: "typesofillegals.csv"
 medicalassistance: "medicalassistance.csv"
+containersize: "containersize.csv"
